--- a/app/styles/theme.scss
+++ b/app/styles/theme.scss
@@ -5,6 +5,7 @@ $Theme-margin-large: 200px;
 
 $Theme-color-white: #ffffff;
 $Theme-color-black: #333333;
+$Theme-color-grey: #d8d8d8;
 $Theme-color-blue: #0b3958;
 $Theme-color-light-blue: #74b9dd;
 $Theme-color-red: #d05353;
@@ -12,7 +13,7 @@ $Theme-color-green: #36d0a3;
 
 $Theme-font-families: (
   sans: 'proxima-nova',
-  serif: 'minion-pro'
+  serif: 'minion-pro-semi'
 );
 
 @mixin font-properties($family) {
