--- a/app/styles/components/_hero.scss
+++ b/app/styles/components/_hero.scss
@@ -1,4 +1,10 @@
 .Hero {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  padding: $Theme-margin-large $Theme-margin-default;
+
   color: $Theme-color-white;
   background-color: $Theme-color-light-blue;
 }
@@ -24,5 +30,6 @@
   max-width: 600px;
   margin-top: $Theme-margin-half;
   font-size: 24px;
+  line-height: 34px;
   text-align: center;
 }
