Background images and two column container

--- a/app/styles/components/_hero.scss
+++ b/app/styles/components/_hero.scss
@@ -7,6 +7,9 @@
 
   color: $Theme-color-white;
   background-color: $Theme-color-light-blue;
+  background-image: url('../images/hero@2x.png');
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 
 .Hero-title {
