Board and officers grid

--- a/app/styles/components/base.scss
+++ b/app/styles/components/base.scss
@@ -1,7 +1,9 @@
 @import 'buttons';
-@import 'logo';
 @import 'footer';
+@import 'grid';
 @import 'hero';
+@import 'logo';
 @import 'panel';
+@import 'person';
 @import 'separator';
 @import 'two-column-container';
