--- a/app/styles/components/_two-column-container.scss
+++ b/app/styles/components/_two-column-container.scss
@@ -2,18 +2,20 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  flex-wrap: wrap;
 
   width: 100%;
-
-  margin-top: $Theme-margin-half;
 }
 
 .TwoColumnContainer-column {
-  flex: 1;
   max-width: 500px;
 
   font-size: 20px;
   line-height: 30px;
+
+  margin-top: $Theme-margin-half;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .TwoColumnContainer-title {
