--- a/app/styles/components/_background.scss
+++ b/app/styles/components/_background.scss
@@ -34,13 +34,13 @@
 }
 
 .BackgroundColumn--imageServices {
-  background-image: url('../images/services@2x.png');
+  background-image: url('../images/services@2x.jpg');
 }
 
 .BackgroundColumn--imageMentorship{
-  background-image: url('../images/mentorship@2x.png');
+  background-image: url('../images/mentorship@2x.jpg');
 }
 
 .BackgroundColumn--imageNetworking {
-  background-image: url('../images/networking@2x.png');
+  background-image: url('../images/networking@2x.jpg');
 }
