--- a/app/styles/components/_hero.scss
+++ b/app/styles/components/_hero.scss
@@ -7,7 +7,7 @@
 
   color: $Theme-color-white;
   background-color: $Theme-color-light-blue;
-  background-image: url('../images/hero@2x.png');
+  background-image: url('../images/hero@2x.jpg');
   background-size: cover;
   background-repeat: no-repeat;
 }
