--- a/app/styles/components/_panel.scss
+++ b/app/styles/components/_panel.scss
@@ -77,14 +77,14 @@ $panel-content-max-width: 500px;
 }
 
 .Panel--cta {
-  background-image: url('../images/cta@2x.png');
+  background-image: url('../images/cta@2x.jpg');
   background-size: cover;
   background-repeat: no-repeat;
 }
 
 .Panel--networking {
   color: $Theme-color-white;
-  background-image: url('../images/networking@2x.png');
+  background-image: url('../images/networking@2x.jpg');
   background-size: 100% 100%;
   background-repeat: no-repeat;
 }
