Mobile fixes on form and footer

--- a/app/styles/components/_panel.scss
+++ b/app/styles/components/_panel.scss
@@ -9,7 +9,7 @@ $panel-content-max-width: 500px;
   flex-direction: column;
   align-items: center;
 
-  padding: $Theme-margin-large $Theme-margin-default;
+  padding: $Theme-margin-large $Theme-margin-half;
 
   color: $Theme-color-blue;
 }
