--- a/app/styles/components/_two-column-container.scss
+++ b/app/styles/components/_two-column-container.scss
@@ -21,6 +21,7 @@ $column-max-width: 500px;
   margin-top: $Theme-margin-half;
   margin-left: auto;
   margin-right: auto;
+  padding: 0 $Theme-margin-small;
 }
 
 .TwoColumnContainer-title {
