--- a/app/styles/components/_inputs.scss
+++ b/app/styles/components/_inputs.scss
@@ -1,13 +1,14 @@
 $input-padding: 10px;
-$input-group-width: 500px;
+$input-group-min-width: 200px;
+$input-group-break-mobile: 549px;
 
 .InputGroup {
   width: 100%;
-  min-width: 500px;
 
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  flex-wrap: wrap;
 
   margin-bottom: $Theme-margin-small;
 }
@@ -15,7 +16,11 @@ $input-group-width: 500px;
 .InputGroup-column {
   display: flex;
   flex-direction: column;
-  flex: 1;
+  flex: 1 1 $input-group-min-width;
+
+  min-width: $input-group-min-width;
+
+  border-bottom: 1px solid $Theme-color-white;
 }
 
 .InputGroup-label {
@@ -44,6 +49,14 @@ $input-group-width: 500px;
   width: 100%;
 }
 
-.InputGroup--bottomBorder {
-  border-bottom: 1px solid $Theme-color-white;
+.InputGroup--noBorder {
+  .InputGroup-column {
+    border: none;
+  }
+}
+
+@media (max-width: $input-group-break-mobile) {
+  .InputGroup-marginOnSmall {
+    margin-bottom: $Theme-margin-small;
+  }
 }
