--- a/app/styles/components/_sponsor-grid.scss
+++ b/app/styles/components/_sponsor-grid.scss
@@ -3,11 +3,12 @@
   display: flex;
   flex-direction: row;
   justify-content: center;
+  flex-wrap: wrap;
 
   margin-top: $Theme-margin-half;
 }
 
 .SponsorGrid-cell {
   height: 80px;
-  margin-right: $Theme-margin-half;
+  margin: $Theme-margin-small $Theme-margin-small;
 }
