Fix margin between sponsors

--- a/app/styles/components/_sponsor-grid.scss
+++ b/app/styles/components/_sponsor-grid.scss
@@ -10,5 +10,5 @@
 
 .SponsorGrid-cell {
   height: 80px;
-  margin: $Theme-margin-small $Theme-margin-small;
+  margin: $Theme-margin-small $Theme-margin-half;
 }
