--- a/app/styles/components/_background.scss
+++ b/app/styles/components/_background.scss
@@ -1,3 +1,5 @@
+$background-z-index: -1;
+
 .Background {
   display: flex;
   flex-direction: row;
@@ -5,7 +7,7 @@
   width: 100%;
   height: 100%;
   position: absolute;
-  z-index: -1;
+  z-index: $background-z-index;
 
   left: 0;
   margin-top: -$Theme-margin-large;
