--- a/app/styles/components/_buttons.scss
+++ b/app/styles/components/_buttons.scss
@@ -1,8 +1,9 @@
 $button-width: 180px;
 $button-height: 50px;
+$button-transtition-duration: 0.3s;
 
 .Button {
-  @include font-properties(sans);
+  @include font-properties(sans, desktop, content, small);
 
   display: block;
 
@@ -12,10 +13,9 @@ $button-height: 50px;
 
   background-color: $Theme-color-red;
 
-  font-size: 16px;
   color: $Theme-color-white;
-  text-transform: uppercase;
   text-align: center;
+  text-transform: uppercase;
   line-height: $button-height;
 
   cursor: pointer;
@@ -30,11 +30,11 @@ $button-height: 50px;
 .Button:hover {
   background-color: darken($Theme-color-red, 15%);
 
-  transition: background-color .3s;
+  transition: background-color $button-transtition-duration;
 }
 
 .Button--outline:hover {
   background-color: rgba(255, 255, 255, 0.15);
 
-  transition: background-color 0.3;
+  transition: background-color $button-transtition-duration;
 }
