--- a/app/styles/components/_person.scss
+++ b/app/styles/components/_person.scss
@@ -29,32 +29,25 @@ $person-link-icon-size: 25px;
   @include font-properties(sans);
 
   text-transform: uppercase;
-
-  font-size: 20px;
-  line-height: 30px;
 }
 
 .Person-job {
-  @include font-properties(serif);
+  @include font-properties(serif, desktop, content, small);
 
   margin-top: $person-job-margin;
   text-transform: capitalize;
 
-  opacity: 0.7;
-  font-size: 16px;
-  line-height: 26px;
+  opacity: $Theme-opacity-white;
   font-weight: bold;
 }
 
 .Person-company {
-  @include font-properties(serif);
+  @include font-properties(serif, desktop, content, large);
 
   margin-top: $Theme-margin-small;
   text-transform: capitalize;
 
-  opacity: 0.7;
-  font-size: 24px;
-  line-height: 34px;
+  opacity: $Theme-opacity-white;
   font-style: italic;
 }
 
@@ -71,14 +64,10 @@ $person-link-icon-size: 25px;
 
   .Person-job,
   .Person-company {
-    opacity: 0.6;
+    opacity: $Theme-opacity-black;
   }
 }
 
 .Person--noMargin {
   margin: 0;
-}
-
-.Person--placeholder{
-  width: 400px;
 }
