--- a/app/styles/theme.scss
+++ b/app/styles/theme.scss
@@ -11,11 +11,58 @@ $Theme-color-light-blue: #74b9dd;
 $Theme-color-red: #d05353;
 $Theme-color-green: #36d0a3;
 
+$Theme-opacity-half: 0.5;
+$Theme-opacity-white: 0.7;
+$Theme-opacity-black: 0.6;
+
 $Theme-font-families: (
   sans: 'proxima-nova',
   serif: 'minion-pro-caption',
 );
 
-@mixin font-properties($family) {
+$Theme-font-sizes: (
+  desktop: (
+    hero: (
+      large: (
+        font-size: 54px,
+        line-height: 64px
+      ),
+      base: (
+        font-size: 38px,
+        line-height: 48px
+      ),
+      small: (
+        font-size: 24px,
+        line-height: 34px
+      ),
+    ),
+    content: (
+      sub-heading: (
+        font-size: 44px,
+        line-height: 40px
+      ),
+      heading: (
+        font-size: 28px,
+        line-height: 38px
+      ),
+      large: (
+        font-size: 24px,
+        line-height: 34px
+      ),
+      base: (
+        font-size: 20px,
+        line-height: 30px
+      ),
+      small: (
+        font-size: 16px,
+        line-height: 26px
+      ),
+    )
+  )
+);
+
+@mixin font-properties($family, $resolution: 'desktop', $location: 'content', $size: 'base') {
   font-family: map-get($Theme-font-families, $family);
+  font-size: map-get(map-get(map-get(map-get($Theme-font-sizes, $resolution), $location), $size), 'font-size');
+  line-height: map-get(map-get(map-get(map-get($Theme-font-sizes, $resolution), $location), $size), 'line-height');
 }
