--- a/app/styles/components/_inputs.scss
+++ b/app/styles/components/_inputs.scss
@@ -31,7 +31,7 @@ $input-group-break-mobile: 549px;
 }
 
 .InputGroup-input {
-  @include font-properties(serif, desktop, content, small);
+  @include font-properties(sans, desktop, content, small);
 
   padding: $input-padding 0;
 
