--- a/app/styles/components/_background.scss
+++ b/app/styles/components/_background.scss
@@ -39,10 +39,16 @@ $background-z-index: -1;
   background-image: url('../images/services@2x.jpg');
 }
 
-.BackgroundColumn--imageMentorship{
+.BackgroundColumn--imageMentorship {
   background-image: url('../images/mentorship@2x.jpg');
 }
 
 .BackgroundColumn--imageNetworking {
   background-image: url('../images/networking@2x.jpg');
+}
+
+@media (max-width: $Theme-break-mobile) {
+  .Background {
+    display: none;
+  }
 }
