--- a/app/styles/components/_footer.scss
+++ b/app/styles/components/_footer.scss
@@ -11,3 +11,13 @@
   color: $Theme-color-white;
   font-weight: bold;
 }
+
+@media (max-width: $Theme-break-mobile) {
+  .Footer {
+    padding: $Theme-margin-half $Theme-margin-small;
+  }
+
+  .Footer-content {
+    @include font-properties(sans, mobile);
+  }
+}
