--- a/app/styles/components/_logo.scss
+++ b/app/styles/components/_logo.scss
@@ -1,14 +1,32 @@
 $logo-width: 179px;
 $logo-height: 120px;
 
+$logo-width-mobile: 76px;
+$logo-height-mobile: 50px;
+
 .Logo {
   width: $logo-width;
   height: $logo-height;
+
   background-image: url('../images/logo@2x.png');
-  background-size: contain;
+  background-size: cover;
 }
 
 .Logo.Logo--half {
   width: $logo-width / 2;
   height: $logo-height / 2;
+}
+
+@media (max-width: $Theme-break-mobile) {
+  .Logo {
+    width: $logo-width-mobile;
+    height: $logo-height-mobile;
+
+    background-image: url('../images/logo.png');
+  }
+
+  .Logo.Logo--half {
+    width: $logo-width-mobile;
+    height: $logo-height-mobile;
+  }
 }
