--- a/app/styles/theme.scss
+++ b/app/styles/theme.scss
@@ -15,6 +15,8 @@ $Theme-opacity-half: 0.5;
 $Theme-opacity-white: 0.7;
 $Theme-opacity-black: 0.6;
 
+$Theme-break-mobile: 699px;
+
 $Theme-font-families: (
   sans: 'proxima-nova',
   serif: 'minion-pro-caption',
@@ -56,6 +58,44 @@ $Theme-font-sizes: (
       small: (
         font-size: 16px,
         line-height: 26px
+      ),
+    )
+  ),
+  mobile: (
+    hero: (
+      large: (
+        font-size: 24px,
+        line-height: 34px
+      ),
+      base: (
+        font-size: 16px,
+        line-height: 26px
+      ),
+      small: (
+        font-size: 16px,
+        line-height: 26px
+      ),
+    ),
+    content: (
+      sub-heading: (
+        font-size: 32px,
+        line-height: 36px
+      ),
+      heading: (
+        font-size: 20px,
+        line-height: 30px
+      ),
+      large: (
+        font-size: 20px,
+        line-height: 30px
+      ),
+      base: (
+        font-size: 16px,
+        line-height: 26px
+      ),
+      small: (
+        font-size: 12px,
+        line-height: 22px
       ),
     )
   )
