--- a/app/styles/components/_nav.scss
+++ b/app/styles/components/_nav.scss
@@ -4,6 +4,12 @@ $nav-height-mobile: 60px;
 $nav-logo-width: 75px;
 $nav-logo-height: 50px;
 
+$nav-logo-mobile-width: 52px;
+$nav-logo-mobile-height: 35px;
+
+$nav-burger-width: 25px;
+$nav-burger-height: 16px;
+
 .Nav {
   width: 100%;
   height: $nav-height;
@@ -29,7 +35,8 @@ $nav-logo-height: 50px;
 
   margin-left: $Theme-margin-small;
 
-  background-size: cover;
+  background-size: contain;
+  background-repeat: no-repeat;
   background-image: url('../images/logo-light-blue@2x.png');
 }
 
@@ -53,6 +60,19 @@ $nav-logo-height: 50px;
   }
 }
 
+.Nav-burger {
+  width: $nav-burger-width;
+  height: $nav-burger-height;
+
+  margin-right: $Theme-margin-small;
+
+  cursor: pointer;
+
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-image: url('../images/hamburger@2x.png');
+}
+
 .Nav.Nav--onTop {
   justify-content: flex-end;
 
@@ -73,11 +93,26 @@ $nav-logo-height: 50px;
     }
   }
 
+  .Nav-burger {
+    background-image: url('../images/hamburger_white@2x.png');
+  }
+
   transition: all 0.6s;
 }
 
 @media (max-width: $Theme-break-mobile) {
   .Nav {
     height: $nav-height-mobile;
+
+    justify-content: space-between;
+  }
+
+  .Nav-logo {
+    width: $nav-logo-mobile-width;
+    height: $nav-logo-mobile-height;
+  }
+
+  .Nav-links {
+    display: none;
   }
 }
