Experts page mobile

--- a/app/styles/components/_experts-list.scss
+++ b/app/styles/components/_experts-list.scss
@@ -42,3 +42,17 @@ $experts-list-max-width: 500px;
   color: $Theme-color-blue;
   border-bottom: 2px solid $Theme-color-green;
 }
+
+@media (max-width: $Theme-break-mobile) {
+  .ExpertsList-expert {
+    margin-bottom: $Theme-margin-default;
+  }
+
+  .ExpertsList-description {
+    @include font-properties(serif, mobile);
+  }
+
+  .ExpertsList-tag {
+    @include font-properties(serif, mobile);
+  }
+}
