Optimizes experts image

--- a/app/styles/components/_hero.scss
+++ b/app/styles/components/_hero.scss
@@ -15,7 +15,7 @@ $hero-max-width: 600px;
 }
 
 .Hero--experts {
-  background-image: url('../images/experts@2x.png');
+  background-image: url('../images/experts@2x.jpg');
 }
 
 .Hero-title {
