Fix footer icons margin

--- a/app/styles/components/_footer.scss
+++ b/app/styles/components/_footer.scss
@@ -53,7 +53,7 @@ $icon-size: 25px;
   width: $icon-size;
   height: $icon-size;
 
-  margin: $Theme-margin-half $Theme-margin-small 0 0;
+  margin: $Theme-margin-small $Theme-margin-small 0 0;
 }
 
 @media (max-width: $Theme-break-mobile) {
