--- a/app/styles/components/_hero.scss
+++ b/app/styles/components/_hero.scss
@@ -19,7 +19,7 @@ $hero-max-width: 600px;
 }
 
 .Hero-title {
-  margin-top: $Theme-margin-default;
+  margin-top: $Theme-margin-half;
 
   text-align: center;
 }
