--- a/app/styles/components/_inputs.scss
+++ b/app/styles/components/_inputs.scss
@@ -28,6 +28,8 @@ $input-group-break-mobile: 549px;
 
   font-weight: bold;
   text-transform: uppercase;
+  
+  color: $Theme-color-white;
 }
 
 .InputGroup-input {
